[gd_scene load_steps=6 format=3 uid="uid://c8xvn8yqxqxqx"]

[ext_resource type="Script" uid="uid://m4hu22y7axg6" path="res://scenes/game/Game.gd" id="1_0x0x0"]
[ext_resource type="PackedScene" path="res://scenes/game/CurrencyDisplay.tscn" id="2_0x0x0"]
[ext_resource type="PackedScene" path="res://scenes/game/ProgressBar.tscn" id="3_0x0x0"]
[ext_resource type="PackedScene" path="res://scenes/game/CurrencyGainButton.tscn" id="4_0x0x0"]
[ext_resource type="PackedScene" path="res://scenes/ui/UpgradePanel.tscn" id="5_upgrade"]

[node name="Game" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0x0x0")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.2, 1)

[node name="HelloWorldLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -300.0
offset_right = 200.0
offset_bottom = -200.0
grow_horizontal = 2
grow_vertical = 2
text = "Hello World!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CurrencyDisplay" parent="." instance=ExtResource("2_0x0x0")]
layout_mode = 1

[node name="ProgressBar" parent="." instance=ExtResource("3_0x0x0")]
layout_mode = 1

[node name="CurrencyGainButton" parent="." instance=ExtResource("4_0x0x0")]
layout_mode = 1

[node name="UpgradePanel" parent="." instance=ExtResource("5_upgrade")]
layout_mode = 1
grow_horizontal = 2
grow_vertical = 2

[node name="TopLeftMenu" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 120.0
offset_bottom = 200.0

[node name="CurrencyIcon" type="Button" parent="TopLeftMenu"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = "ðŸ’°"

[node name="UpgradeIcon" type="Button" parent="TopLeftMenu"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = "âš¡"

[node name="SaveIcon" type="Button" parent="TopLeftMenu"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = "ðŸ’¾"

[node name="ExitIcon" type="Button" parent="TopLeftMenu"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = "ðŸšª"
